LPS-39726 - Fix alignment of control panel secondary nav

--- a/portal-web/docroot/html/themes/control_panel/_diffs/css/custom.css
+++ b/portal-web/docroot/html/themes/control_panel/_diffs/css/custom.css
@@ -65,6 +65,7 @@ $dockbarOpenGradientStart: #0EA6F9;
 	/* ---------- Control Panel Secondary Nav ---------- */
 
 	.control-panel-bar-secondary {
+		margin-left: 10px;
 		padding-top: 1.1em;
 
 		&.nav-pills {
